<resources>
    <string name="app_name">Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot">forgot username or password</string>
    <string name="first_name">first name :</string>
    <string name="last_name">Last name :</string>
    <string name="login_as_a_guest_user">Login as a guest user</string>
    <string name="search">search</string>
    <string name="trash">Trash</string>
    <string name="logout">logOut</string>
    <string name="log_out1">Are you sure you want to log out ?</string>
    <string name="log_out2">if you logOut your tasks is destroy !</string>
    <string name="log_out3">if you want do`nt destroy your tasks you should sign up</string>
    <string name="done">Done</string>
    <string name="share_task">Share task :</string>
    <string name="share_task_text">%1$s
        with description :
        %2$s
        and Date :
        %3$s
        and time :
        %4$s
        and %5$s
    </string>
    <string name="is_done">is Done</string>
    <string name="is_not_done">It`s not Done</string>

</resources>
