<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/colorTextDialog"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/first_name_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/colorTextDialog"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/last_name_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/username"
            android:textColor="@color/colorTextDialog"/>

        <EditText
            android:id="@+id/username_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/colorTextDialog"/>

        <EditText
            android:id="@+id/password_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/done_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/tabLayoutColor"
        android:text="Done"
        android:layout_gravity="bottom|right"
        android:background="@null"/>

    <Button
        android:id="@+id/cancel_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:textColor="@color/tabLayoutColor"
        android:textSize="15sp"
        android:layout_gravity="bottom|left"
        android:background="@null"/>
</FrameLayout>